# qt_itmp_prep

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  storage.cpp  storage.h
